[gd_scene load_steps=2 format=3 uid="uid://ntjaaud55tuh"]

[ext_resource type="Script" uid="uid://b8h7e3hvw8xty" path="res://scenes/GameUI.gd" id="1_jkspe"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_jkspe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 448.0
offset_top = 242.0
offset_right = 664.0
offset_bottom = 359.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Command Center"

[node name="LevelLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Level 1"

[node name="UpgradeButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "UPGRADE"

[node name="EnterBaseButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Enter"

[node name="TopBar" type="Panel" parent="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ScrapLabel" type="Label" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Scrap: 0"

[node name="WoodLabel" type="Label" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Wood: 0"

[node name="PlanksLabel" type="Label" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
text = "Plank: 0"

[node name="SteelLabel" type="Label" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
text = "Steel: 0"

[node name="DnaLabel" type="Label" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2

[node name="BtnArmy" type="Button" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
text = "Army"

[node name="BtnResearch" type="Button" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
text = "Research"

[node name="BtnRank" type="Button" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
text = "LeaderBoard"

[node name="BtnHero" type="Button" parent="Control/TopBar/HBoxContainer"]
layout_mode = 2
text = "Heroes"

[node name="RaidWarning" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_top = 63.0
offset_right = 1154.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="Control/RaidWarning"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -11.5
offset_right = 142.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "WARNING: Enemy approaching! (10s)"

[connection signal="pressed" from="Control/Panel/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/EnterBaseButton" to="." method="_on_enter_base_button_pressed"]
[connection signal="pressed" from="Control/TopBar/HBoxContainer/BtnArmy" to="." method="_on_btn_army_pressed"]
[connection signal="pressed" from="Control/TopBar/HBoxContainer/BtnResearch" to="." method="_on_btn_research_pressed"]
[connection signal="pressed" from="Control/TopBar/HBoxContainer/BtnRank" to="." method="_on_btn_leaderboard_pressed"]
[connection signal="pressed" from="Control/TopBar/HBoxContainer/BtnHero" to="." method="_on_btn_hero_pressed"]
